--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-Names of People that contributed to this project is
+Names of People that contributed to this project 
 
-Iwuchukwu Ikechukwu Iwuchukwuonline@gmail.com 
-Olowookun Sunday superstaz.dare@gmail.com
+Muh fadlullah Lawal fadlullahlawal2@gmail.com
+
